--- a/src/container/About/about.scss
+++ b/src/container/About/about.scss
@@ -41,6 +41,7 @@
     text-align: left;
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
+    color: var(--black-color);
 
     span {
       font-family: var(--font-code);
@@ -71,6 +72,10 @@
   }
 }
 
+[data-theme="dark"] .app__profiles-desc p {
+  color: #ffffff;
+}
+
 .app__profiles-items {
   width: 100%;
   display: flex;
@@ -92,18 +97,9 @@
   margin: 2rem;
 
   img {
-    width: 190px;
-    height: 190px;
+    width: clamp(150px, 12vw, 280px);
+    height: clamp(150px, 12vw, 280px);
     border-radius: 15px;
     object-fit: cover;
-  }
-
-  @media screen and (min-width: 2000px) {
-    width: 370px;
-    margin: 2rem 4rem;
-
-    img {
-      height: 320px;
-    }
   }
 }
