--- a/src/container/Skills/skills.scss
+++ b/src/container/Skills/skills.scss
@@ -67,8 +67,8 @@
   transition: all 0.3s ease;
 
   div {
-    width: 90px;
-    height: 90px;
+    width: clamp(70px, 5vw, 130px);
+    height: clamp(70px, 5vw, 130px);
     border-radius: 50%;
     background-color: var(--white-color);
 
@@ -82,16 +82,6 @@
     &:hover {
       box-shadow: 0 0 25px var(--lightPink-color);
     }
-
-    @media screen and (min-width: 2000px) {
-      width: 150px;
-      height: 150px;
-    }
-
-    @media screen and (max-width: 450px) {
-      width: 70px;
-      height: 70px;
-    }
   }
 
   p {
@@ -101,14 +91,6 @@
 
   &:hover {
     transform: scale(1.1);
-  }
-
-  @media screen and (min-width: 2000px) {
-    margin: 1rem 2rem;
-
-    p {
-      margin-top: 1rem;
-    }
   }
 
   @media screen and (max-width: 1200px) {
