--- a/src/container/Work/work.scss
+++ b/src/container/Work/work.scss
@@ -31,10 +31,6 @@
       color: #ffffff;
     }
 
-    @media screen and (min-width: 2000px) {
-      padding: 1rem 2rem;
-      border-radius: 0.85rem;
-    }
   }
 
   .item-active {
@@ -68,12 +64,6 @@
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     }
 
-    @media screen and (min-width: 2000px) {
-      width: 470px;
-      padding: 1.25rem;
-      border-radius: 0.75rem;
-    }
-
     @media screen and (max-width: 300px) {
       width: 100%;
       margin: 1rem;
@@ -93,9 +83,6 @@
     object-fit: cover;
   }
 
-  @media screen and (min-width: 2000px) {
-    height: 350px;
-  }
 }
 
 .app__work-hover {
